k8s/olss-app.service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  olss-demo-app
  namespace: olss-demo-app
spec:
  selector:
    app:  olss-demo-app
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
